--- a/custom_components/clash/manifest.json
+++ b/custom_components/clash/manifest.json
@@ -1,11 +1,13 @@
 {
-  "domain": "clash",
-  "name": "Clash",
-  "codeowners": ["@yangtfu"],
-  "config_flow": true,
-  "dependencies": [],
-  "documentation": "https://github.com/yangtfu/hass-clash/",
-  "iot_class": "local_polling",
-  "requirements": [],
-  "version": "1.1.0"
+    "domain": "clash",
+    "name": "Clash",
+    "codeowners": [
+        "@yangtfu"
+    ],
+    "config_flow": true,
+    "dependencies": [],
+    "documentation": "https://github.com/yangtfu/hass-clash/",
+    "iot_class": "local_polling",
+    "requirements": [],
+    "version": "1.1.1"
 }
