--- a/.github/workflows/hasc.yaml
+++ b/.github/workflows/hasc.yaml
@@ -1,10 +1,11 @@
 name: HACS Action
 
-on:
+on: 
   push:
   pull_request:
   schedule:
     - cron: "0 0 * * *"
+  workflow_dispatch:  
 
 jobs:
   hacs:
